# FST

./: CMakeLists.txt  FST  FST.c  FST.h  Makefile  README.md  addrs_test.txt  main.c  pfx_test.txt  teste.cpp  teste.txt
data/: addrs_test.txt
src/: .FST.c.swp  FST  FST.c  FST.h  Makefile  main.c  resultado.txt  teste.cpp
